force-app/main/default/objects/BGCM__Deep_Clone_Child_Setting__mdt/BGCM__Deep_Clone_Child_Setting__mdt.object-meta.xml
<CustomObject>
    <description>For configuring which related lists on a given record will be cloned when using the Deep Clone functionality.</description>
    <label>Deep Clone Child Setting</label>
    <pluralLabel>Deep Clone Child Settings</pluralLabel>
</CustomObject>