force-app/main/default/objects/BGCM__Deep_Clone_Child_Setting__mdt/fields/BGCM__Child_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>BGCM__Child_Relationship_Name__c</fullName>
    <description>API Name of the child relationship for the related list to be cloned.</description>
    <inlineHelpText>API Name of the child relationship for the related list to be cloned. eg. child_relationship__r Relationship must be to the parent object specified in the related Clone Parent setting.</inlineHelpText>
    <label>Child Relationship Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>