force-app/main/default/objects/BGCM__Deep_Clone_Child_Setting__mdt/fields/BGCM__Deep_Clone_Parent_Setting__c.field-meta.xml
<CustomField>
    <fullName>BGCM__Deep_Clone_Parent_Setting__c</fullName>
    <description>The Deep Clone Parent Setting for this cloned child related list.</description>
    <inlineHelpText>The Deep Clone Parent Setting for this cloned child related list.</inlineHelpText>
    <label>Deep Clone Parent Setting</label>
    <referenceTo>BGCM__Deep_Clone_Parent_Setting__mdt</referenceTo>
    <relationshipLabel>Deep Clone Child Settings</relationshipLabel>
    <relationshipName>Deep_Clone_Child_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>