force-app/main/default/objects/BGCM__Deep_Clone_Child_Setting__mdt/fields/BGCM__Default_Values__c.field-meta.xml
<CustomField>
    <fullName>BGCM__Default_Values__c</fullName>
    <description>When set, these values will override the values on the record being cloned. List should be separated by commas. Note: this functionality should be used in the case of objects using Sequence Numbers, to set Name to &quot;System Number&quot;. 
Syntax example: Field_API_Name__c = &quot;Default Value&quot;; Field_API_Name2__c = &quot;Default Value&quot;.</description>
    <inlineHelpText>Optional. Field Name value pairs that override the copied values of the cloned record. Syntax example: Text_Field_Name__c = &quot;Default Value&quot;, Blank_Value__c = &quot;&quot;, Checkbox_Field_Name__c = false, Number_Field_Name__c = 123</inlineHelpText>
    <label>Default Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>